@@ -21,6 +21,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	jcenter()
 }
 
 dependencies {
@@ -28,6 +29,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.0'
+	implementation 'io.jsonwebtoken:jjwt:0.12.0'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.0'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.0'
 	implementation 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -43,4 +48,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += "--add-opens=java.base/sun.security.util=ALL-UNNAMED"
 }
